deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metarank-api
  labels:
    app: metarank-api
spec:
  clusterIP: None
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: metarank-api
